Set line-height to 0 to prevent gap when editing activity stream item using HTML editor. See #3832.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@5494 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-activity/admin/css/admin.dev.css
+++ b/bp-activity/admin/css/admin.dev.css
@@ -31,6 +31,11 @@
 	margin-top: 1px;
 }
 
+#bp_activity_action div.inside,
+#bp_activity_content div.inside {
+	line-height: 0;
+}
+
 #post-body #bp-activities-action_resize,
 #post-body #bp-activities-content_resize {
 	position: inherit;
